allow multiple mounts via nfs

--- a/plays/k8s/minecraft.yml
+++ b/plays/k8s/minecraft.yml
@@ -28,7 +28,7 @@
         resource_definition:
           spec:
             accessModes:
-              - ReadWriteOnce
+              - ReadWriteMany
             capacity:
               storage: 5Gi
             nfs:
@@ -46,7 +46,7 @@
         resource_definition:
           spec:
             accessModes:
-              - ReadWriteOnce
+              - ReadWriteMany
             storageClassName: ""
             resources:
               requests:
