Re-add zfs bits from deleted openstack work
This takes some code from 9023cfa40c78133f1f7fa157b1fdca7ffc195c9f and
re-uses it in a more common way.

--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -50,3 +50,11 @@ common__unix_users: []
 
 # If Zabbix should be setup and managed.
 common__zabbix_enabled: yes
+
+# The encyrption keys to setup for a ZFS dataset.
+# To generate, run `hexdump -vn32 -e'8/4 "%08X" 1 "\n"' /dev/urandom`
+# common__zfs_dataset_keys:
+#   somepool:
+#     somedataset:
+#       key: somekey
+common__zfs_dataset_keys: {}
