--- a/plays/groups/mariadb.yml
+++ b/plays/groups/mariadb.yml
@@ -5,3 +5,8 @@
       become: yes
       tags:
         - zfs
+    - role: mrlesmithjr.mariadb_galera_cluster
+      become: yes
+      tags:
+        - mariadb
+        - galera
