--- a/plays/hosts/docker.hogs.tswn.us.yml
+++ b/plays/hosts/docker.hogs.tswn.us.yml
@@ -2,6 +2,10 @@
 - hosts: docker.hogs.tswn.us
   become: yes
   roles:
+    - role: ara-docker
+      tags:
+        - docker
+        - ara
     - role: docker-esphome
       tags:
         - docker
