--- a/roles/ara-docker/tasks/main.yml
+++ b/roles/ara-docker/tasks/main.yml
@@ -14,6 +14,55 @@
     state: "present"
     shell: "/bin/bash"
 
+- ansible.builtin.set_fact:
+    ara_ip_address: 10.10.0.17
+    db_user:
+      name: ara
+      password: !vault |
+            $ANSIBLE_VAULT;1.1;AES256
+            63653535666539373364333935613261373338313862353563653662383137386138316530653736
+            3433656433633738396362666665373762326663313533350a616333633136333330396364653662
+            38316537613764373862323135346664613833306664343632633836323131306562623637366261
+            3962383331346139630a376264393633393936613934303533316162393239393334366632623838
+            32373133333937646432306664393434313438613330393764346338636632666135386632336637
+            6634393531303931613664653939633933363031643365666665
+      priv:
+        ara.*: ALL
+  no_log: yes
+  tags:
+    - always
+
+- name: Setup database
+  community.mysql.mysql_db:
+    name: ara
+    state: present
+    login_password: "{{ hostvars['mariadb01.hogs.tswn.us'].mariadb_mysql_root_password }}"
+    login_unix_socket: /var/run/mysqld/mysqld.sock
+    login_user: root
+  delegate_to: mariadb01.hogs.tswn.us
+  tags:
+    - mariadb
+  when:
+    # Only run interactively; not part of ansible-cron
+    - ansible_connection == 'ssh'
+- name: Setup database users
+  no_log: yes
+  community.mysql.mysql_user:
+    name: "{{ db_user.name }}"
+    host: "{{ ara_ip_address }}"
+    password: "{{ db_user.password }}"
+    priv: "{{ db_user.priv }}"
+    login_password: "{{ hostvars['mariadb01.hogs.tswn.us'].mariadb_mysql_root_password }}"
+    login_unix_socket: /var/run/mysqld/mysqld.sock
+    login_user: root
+    state: present
+  delegate_to: mariadb01.hogs.tswn.us
+  tags:
+    - mariadb
+  when:
+    # Only run interactively; not part of ansible-cron
+    - ansible_connection == 'ssh'
+
 - name: "Create ara directory"
   ansible.builtin.file:
     path: "/opt/ara"
@@ -28,6 +77,7 @@
     owner: "ara"
     group: "ara"
     mode: "u=rw"
+  no_log: yes
   vars:
     ara_config:
       default:
@@ -37,11 +87,11 @@
         CORS_ORIGIN_WHITELIST:
           - "http://ara.hogs.tswn.us"
         DATABASE_CONN_MAX_AGE: 28800
-        DATABASE_ENGINE: "django.db.backends.mysql"
-        DATABASE_NAME: "ara"
-        DATABASE_USER: "ara"
-        DATABASE_PASSWORD: "{{ hostvars['mysql.hogs.tswn.us'].mysql_server__users | selectattr('name', 'equalto', 'ara') | map(attribute='password') | first }}"
-        DATABASE_HOST: "mysql.hogs.tswn.us"
+        DATABASE_ENGINE: django.db.backends.mysql
+        DATABASE_NAME: ara
+        DATABASE_USER: "{{ db_user.name }}"
+        DATABASE_PASSWORD: "{{ db_user.password }}"
+        DATABASE_HOST: mariadb.hogs.tswn.us
         DEBUG: False
         EXTERNAL_AUTH: False
         LOGGING:
@@ -81,13 +131,23 @@
       version: "3"
       services:
         api_server:
+          dns:
+            - 10.10.0.1
           environment:
-            ARA_SETTINGS: "/opt/ara/settings.yaml"
-          image: "quay.io/recordsansible/ara-api:latest"
+            ARA_SETTINGS: /opt/ara/settings.yaml
+          image: quay.io/recordsansible/ara-api:latest
+          mac_address: 02:42:0a:75:00:26
+          networks:
+            man:
+              ipv4_address: "{{ ara_ip_address }}"
           ports:
-            - "8000:8000/tcp"
+            - 8000:8000/tcp
           volumes:
-            - "/opt/ara:/opt/ara"
+            - /opt/ara:/opt/ara
+      networks:
+        man:
+          external:
+            name: man
     pull: yes
     restarted: "{{ ara_config.changed | bool }}"
   vars:
