Move homeassisant to mariadb

--- a/firewall_zones/vyos_home/man/from-home-ipv4.yml
+++ b/firewall_zones/vyos_home/man/from-home-ipv4.yml
@@ -38,3 +38,14 @@
   source:
     group:
       address_group: "FILE-SERVER-v4"
+- description: Allow MariaDB connections from specific hosts
+  action: accept
+  destination:
+    group:
+      address_group: MARIADB-SERVER-v4
+  protocol: tcp
+  state:
+    new: yes
+  source:
+    group:
+      address_group: MARIADB-TALKERS-v4
