splay out ansible-cron more...15 minutes!

--- a/roles/ansible-cron/tasks/main.yml
+++ b/roles/ansible-cron/tasks/main.yml
@@ -122,8 +122,8 @@
       export ARA_API_SERVER=http://ara.hogs.tswn.us:8000
       export ARA_CALLBACK_THREADS=4
 
-      # Adding up to a minute of jitter so not all machines hit resources at the same time.
-      sleep $(( RANDOM %= 60 ))
+      # Adding up to 15 minutes of jitter so not all machines hit resources at the same time.
+      sleep $(( RANDOM %= 900 ))
 
       cd /src/ansible-playbooks
       /usr/bin/logger -p user.notice -t ansible-cron -- "Pulling updates to /src/ansible-playbooks"
