--- a/roles/ansible-cron/tasks/main.yml
+++ b/roles/ansible-cron/tasks/main.yml
@@ -129,7 +129,7 @@
       /usr/bin/logger -p user.notice -t ansible-cron -- "Pulling updates to /src/ansible-playbooks"
       git pull --rebase
       /usr/bin/logger -p user.notice -t ansible-cron -- "Installing collections"
-      ansible-galaxy collection install --force-with-deps -r requirements.yml
+      ansible-galaxy collection install -U -r requirements.yml
       /usr/bin/logger -p user.notice -t ansible-cron -- "Installing roles"
       ansible-galaxy role install --force-with-deps -r requirements.yml
       /usr/bin/logger -p user.notice -t ansible-cron -- "Running ansible"
