Update firewall rules for new ARA location

--- a/firewall_zones/vyos_home/man/from-home-ipv4.yml
+++ b/firewall_zones/vyos_home/man/from-home-ipv4.yml
@@ -49,3 +49,11 @@
   source:
     group:
       address_group: MARIADB-TALKERS-v4
+- description: Allow ARA Connections
+  action: accept
+  protocol: tcp
+  state:
+    new: true
+  destination:
+    address: 10.10.0.17
+    port: 8000
