--- a/requirements.yml
+++ b/requirements.yml
@@ -2,6 +2,11 @@
 roles:
   - name: "bertvv.bind"
   - name: mrlesmithjr.mariadb_galera_cluster
+    # Temporarily pull from Git directly to pick up
+    # https://github.com/mrlesmithjr/ansible-mariadb-galera-cluster/pull/152
+    scm: git
+    src: https://github.com/mrlesmithjr/ansible-mariadb-galera-cluster.git
+    version: master
   - name: mrlesmithjr.zfs
   - name: "nickjj.docker"
 collections:
