More intelligently reboot machines

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -63,4 +63,5 @@ docker__users:
   - "ansible"
   - "zabbix"
 
+reboot_test_command: whoami
 ssh_listen_to: "{{ common__ip_addresses | ansible.netcommon.ipaddr('address') }}"
