--- a/requirements.yml
+++ b/requirements.yml
@@ -1,6 +1,7 @@
 ---
 roles:
-  - name: "bertvv.bind"
+  - name: bertvv.bind
+    version: v5.1.0
   - name: mrlesmithjr.mariadb_galera_cluster
     # Temporarily pull from Git directly to pick up
     # https://github.com/mrlesmithjr/ansible-mariadb-galera-cluster/pull/152
@@ -8,14 +9,24 @@ roles:
     src: https://github.com/mrlesmithjr/ansible-mariadb-galera-cluster.git
     version: master
   - name: mrlesmithjr.zfs
-  - name: "nickjj.docker"
+  - name: nickjj.docker
+    version: v2.2.0
 collections:
   - name: ansible.posix
-  - name: "ansible.utils"
+    version: 1.5.1
+  - name: ansible.utils
+    version: 2.9.0
   - name: community.docker
+    version: 3.4.1
   - name: community.general
+    version: 6.3.0
   - name: community.mysql
-  - name: "community.zabbix"
-  - name: "devsec.hardening"
+    version: 3.6.0
+  - name: community.zabbix
+    version: 1.9.2
+  - name: devsec.hardening
+    version: 8.6.0
   - name: kubernetes.core
+    version: 2.4.0
   - name: vyos.vyos
+    version: 4.0.0
