Roughly what I think I need for calico config of kairos

--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -210,6 +210,8 @@ bind_zones:
         ip: 10.10.0.102
       - name: test-controlplane03.hogs
         ip: 10.10.0.103
+      - name: test-worker01.hogs
+        ip: 10.10.0.104
 
       # Services Networks
       - name: "installation02"
