--- a/plays/k8s/traefik.yml
+++ b/plays/k8s/traefik.yml
@@ -97,6 +97,22 @@
         state: present
     
     #
+    # Secrets
+    #
+    - name: Create Secrets for traefik
+      kubernetes.core.k8s:
+        api_version: v1
+        context: "{{ cluster }}"
+        kind: Secret
+        name: traefik-hurricane-tokens
+        namespace: default
+        resource_definition:
+          stringData:
+            env_var: "tswn.us:{{ hurricane_txt_tokens['tswn.us'] }}"
+          type: Opaque
+        state: present
+
+    #
     # Deployment
     #
     - name: Create Service for traefik's dashboard
@@ -123,11 +139,27 @@
                     image: traefik:v2.9
                     args:
                       - --api.insecure
-                      - --entryPoints.web.address=:80
+                      - --certificatesresolvers.hurricane.acme.dnschallenge=true
+                      - --certificatesresolvers.hurricane.acme.email=me@shawnwilsher.com
+                      - --entrypoints.web.address=:80
+                      - --entrypoints.websecure.address=:443
+                      - --entrypoints.websecure.http.tls.certresolver=hurricane
+                      - --entrypoints.websecure.http.tls.domains=*.tswn.us
                       - --providers.kubernetescrd
+                      # TODO: remove once working
+                      - --log.level=DEBUG
+                      - --certificatesresolvers.hurricane.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
+                    env:
+                      - name: HURRICANE_TOKENS
+                        valueFrom:
+                          secretKeyRef:
+                            name: traefik-hurricane-tokens
+                            key: env_var
                     ports:
                       - name: web
                         containerPort: 80
+                      - name: websecure
+                        containerPort: 443
                       - name: dashboard
                         containerPort: 8080
         state: present
@@ -170,7 +202,7 @@
               app.kubernetes.io/name: traefik
             type: LoadBalancer
         state: present
-    - name: Create Service for traefik's web port 
+    - name: Create Service for traefik's web ports
       kubernetes.core.k8s:
         api_version: v1
         context: "{{ cluster }}"
@@ -180,8 +212,12 @@
         resource_definition:
           spec:
             ports:
-              - port: 80
+              - name: http
+                port: 80
                 targetPort: web
+              - name: https
+                port: 443
+                targetPort: websecure
             selector:
               app.kubernetes.io/name: traefik
             type: LoadBalancer
