--- a/roles/docker-zwavejs2mqtt/tasks/main.yml
+++ b/roles/docker-zwavejs2mqtt/tasks/main.yml
@@ -110,7 +110,8 @@
               - "--spider"
               - "localhost:8091/health/zwave"
             timeout: "5s"
-          image: "zwavejs/zwavejs2mqtt:latest"
+          # renovate:
+          image: zwavejs/zwave-js-ui:8.9.0
           networks:
             - "zwave"
           volumes:
