need privledges to check if a reboot is required

--- a/plays/update.yml
+++ b/plays/update.yml
@@ -75,6 +75,7 @@
     - name: "Determine if a reboot is required"
       ansible.builtin.stat:
         path: "/var/run/reboot-required"
+      become: yes
       register: reboot_required
     - name: Add hosts to group that will be rebooted
       ansible.builtin.add_host:
