add traefik to test cluster

--- a/plays/test-k8s-cluster.yml
+++ b/plays/test-k8s-cluster.yml
@@ -5,6 +5,9 @@
     - ansible.builtin.import_tasks: k8s/purelb/tasks.yml
       tags:
         - purelb
+    - ansible.builtin.import_tasks: k8s/traefik/tasks.yml
+      tags:
+        - traefik
   vars:
     # Right now, I only have the test cluster, but this will need to change in the future!
     cluster: default
