--- a/plays/test-k8s-cluster.yml
+++ b/plays/test-k8s-cluster.yml
@@ -2,6 +2,12 @@
 - hosts: localhost
   gather_facts: false
   tasks:
+    # External services exposed internally
+    - ansible.builtin.import_tasks: k8s/minio/tasks.yml
+      tags:
+        - minio
+
+    # Internal services
     - ansible.builtin.import_tasks: k8s/purelb/tasks.yml
       tags:
         - purelb
