--- a/plays/test-k8s-cluster.yml
+++ b/plays/test-k8s-cluster.yml
@@ -19,6 +19,9 @@
         - longhorn
       vars:
         longhorn_s3: "{{ hostvars[groups['kairos_test'] | first].longhorn_s3 }}"
+    - ansible.builtin.import_tasks: k8s/rabbitmq-operator/tasks.yml
+      tags:
+        - rabbitmq
   vars:
     # Right now, I only have the test cluster, but this will need to change in the future!
     cluster: default
