Manage Helm dependency versions with Renovate
Tested this with https://regex101.com/r/j9RQ57/3 and ran lint

--- a/plays/k8s/purelb/tasks.yml
+++ b/plays/k8s/purelb/tasks.yml
@@ -15,10 +15,9 @@
         name: purelb
         namespace: purelb
       spec:
-        name: purelb
         chart: purelb
         repo: https://gitlab.com/api/v4/projects/20400619/packages/helm/stable
-        version: v0.7.0
+        version: "0.7.0"
 - name: Setup default (MAN) service pool
   kubernetes.core.k8s:
     api_version: purelb.io/v1
