--- a/plays/k8s/rabbitmq-operator/tasks.yml
+++ b/plays/k8s/rabbitmq-operator/tasks.yml
@@ -12,3 +12,4 @@
         chart: rabbitmq-cluster-operator
         repo: https://charts.bitnami.com/bitnami
         version: "3.2.10"
+    state: present
